<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="@dimen/widget_margin">
  
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="@dimen/widget_inside_margin"
    android:background="@drawable/widget_2x1_background_error"
    android:id="@+id/widgetLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible"
    android:gravity="center" 
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/minUsedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.67"
            android:text="@string/minutesUsed"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/minUsedText"
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.67"
            android:gravity="right"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/chargeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.67"
            android:text="@string/chargeAmount"
            android:textColor="@color/white"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/chargeText"
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.67"
            android:gravity="right"
            android:textColor="@color/white"
            android:textSize="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/newMonthStartsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.67"
            android:text="@string/newMonthStarts"
            android:textColor="@color/white"
            android:textSize="10dp" />

        <TextView
            android:text=""
            android:id="@+id/newMonthStartsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.67"
            android:gravity="right"
            android:textColor="@color/white"
            android:textSize="10sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/balanceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.67"
            android:text="@string/currentBalance"
            android:textColor="@color/white"
            android:textSize="10dp" />

        <TextView
            android:text=""
            android:id="@+id/balanceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.67"
            android:gravity="right"
            android:textColor="@color/white"
            android:textSize="10sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:text=""
            android:id="@+id/statusText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="10sp" />
    </LinearLayout>

</LinearLayout>
</FrameLayout>